# static-single-assignment

./: LICENSE  README.md  pyproject.toml
ssa/: builder.py  graph.py  main.py  statements.py
tests/: example.py  fib.py  test_break.py  test_continue.py  test_functions.py  test_inner_if.py  test_inner_loops.py  test_phi_false.py  test_phi_simple.py  test_phi_true.py
